<resources>
    <string name="app_name">小雨知时</string>

    <string name="slide_1_african_story_books">New African Story Books</string>
    <string name="slide_2_volunteer_professionals">Created by Volunteer Professionals</string>
    <string name="slide_3_download_and_go">Download and Read on the go</string>
    <string name="slide_4_different_languages">Available in different languages</string>
    <string name="slide_1_african_story_books_subtitle">That anyone can freely translate and distribute.</string>
    <string name="slide_2_volunteer_professionals_subtitle">On a single day, designers, writers and illustrators meet to create cool books.</string>
    <string name="slide_3_download_and_go_subtitle">On the bus, in a train, wherever you are - the books are there too.</string>
    <string name="slide_4_different_languages_subtitle">English, Zulu, Afrikaans, Xhosa and more!</string>

    <string name="tutorial_done">完成</string>
    <string name="device_state">设备状态</string>
    <string name="person_name">个人姓名</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_title_fragment">登录</string>
    <string name="register_title_fragment">注册</string>
    <string name="login_select_fragment">请选择您的身份</string>
    <string name="student">学生</string>
    <string name="teacher">老师</string>
    <string name="parent">家长</string>
    <string name="title_activity_home">HomeActivity</string>


    <string name="my_diary">我的日记</string>
    <string name="my_article">我的文章</string>
    <string name="my_class">班级动态</string>
    <string name="bookcase">作文库</string>
    <string name="tutorial_skip">跳过</string>
</resources>
